gl33-master/src/test/deca/context/invalid/other/affectation_int_string.deca
// Invalid test
// Affectation d'un int à un string

{
   int n;
   String s;

   s = n;
   s = 2;
}
